<resources>
    <string name="app_name">SugarEatenController</string>
    <string name="sugar_norm">Sugar norm:\n10% (or 5%) of all calories\n (100g for 2000 cal)</string>
    <string name="previous_day">Previous day:</string>
    <string name="new_record_label">New record:</string>
    <string name="add_new_record_button">Add new record</string>
    <string name="edit_record_in_current_day_button">Edit record in current day</string>
    <string name="edit_chosen_record">Edit chosen record</string>
    <string name="current_amount_of_eaten">Current amount of eaten:</string>
    <string name="amount">Amount</string>
    <string name="at_time">At time</string>
    <string name="enter_new_value">Enter new value</string>
</resources>