<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sugarNorm"
        android:layout_width="347dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sugar_norm"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/prevDayInfo"
        android:layout_width="303dp"
        android:layout_height="33dp"
        android:layout_marginTop="80dp"
        android:text="@string/previous_day"
        android:textAlignment="center"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newRecordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="8dp"
        android:text="@string/new_record_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/newRecordValueInput"
        app:layout_constraintEnd_toStartOf="@+id/newRecordValueInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/todaysResultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/current_amount_of_eaten"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/EditCurrentDayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewRecordButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/newRecordValueInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prevDayInfo"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/addNewRecordButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/add_new_record_button"
        app:layout_constraintBottom_toTopOf="@+id/EditCurrentDayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRecordValueInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/newDayButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text=" New day!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prevDayInfo" />

    <Button
        android:id="@+id/EditCurrentDayButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="27dp"
        android:text="@string/edit_record_in_current_day_button"
        app:layout_constraintBottom_toTopOf="@+id/sugarNorm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>